# status-notifier-watcher-service

./: .gitignore  README.md  meson.build
extra/: status-notifier-watcher.service
rpm/: status-notifier-watcher.spec
src/: status-notifier-watcher.vala
